# Bandformer

./: .gitignore  LICENSE  README.md  configurator.py  eval.py  pyproject.toml  train.py
configs/: train.yaml
data/: prepare.py
nn/: decoder.py  encoder.py  models.py
